# RotaryMenu

./: .gitattributes  LICENSE  MANIFEST.in  README.md  RotaryMenuClasses.py  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
RotaryMenu/: RotaryMenuClasses.py  __init__.py  _version.py  encoder.py
docs/: RotaryMenu-docs.md
